MDEV-5700 Cannot SHOW CREATE VIEW if underlying tabels are ALTERed